Updated index.html and style.css with new features

--- a/pet-landing-page/index.html
+++ b/pet-landing-page/index.html
@@ -23,7 +23,7 @@
     </div> -->
     </section>
     <section class="main">
-      <img src="assets/PhotoEaraser - Copy.jpg" />
+      <img src="assets/PhotoEaraser.jpg" />
     </section>
     <section class="pet-selector">
       <h2>Choose Your Companion</h2>
@@ -48,11 +48,11 @@
       <div class="pet-service">
         <h1>Our Services</h1>
         <ul>
-          <li>Pet Walking</li>
+          <li>Pets</li>
+          <li>Pets Food</li>
+          <li>Pet Accessories</li>
           <li>Pet Grooming</li>
-          <li>Pet Sitter</li>
-          <li>Pet Daycare</li>
-          <li>Pet Training</li>
+          <li>Pet Walker</li>
         </ul>
       </div>
     </section>
@@ -143,30 +143,44 @@
           <h2>Pet's Heaven</h2>
           <h4>We Care About Your Pets...</h4>
         </div>
+        <div class="footer-sections">
+          <div class="footer-address">
+            <h1>PETS HEAVEN</h1>
+            <p>
+              <img
+                src="https://cdn-icons-png.flaticon.com/512/535/535137.png"
+                alt="location"
+                style="width: 16px; vertical-align: middle; margin-right: 5px"
+              />
+              Sai Sansar Complex, Shop No. 05,<br />
+              Plot No. 30, Sector - 05,<br />
+              Behind D-Mart, New Panvel (E),<br />
+              Raigad - 410206
+            </p>
+          </div>
 
-        <div class="footer-links">
-          <h4>Quick Links</h4>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Shop</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </div>
-        <div class="footer-img">
-          <img src="assets/footerImg-removebg-preview.png" />
-        </div>
+          <div class="footer-links">
+            <h4>Quick Links</h4>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Shop</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
 
-        <div class="footer-contact">
-          <h4>Contact Us</h4>
-          <p>📞 +91 8850275587</p>
-          <div class="footer-social">
-            <a href="#"><img src="assets/email.jpg" alt="email" /></a>
-            <a href="#"
-              ><img
-                src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png"
-                alt="Instagram"
-            /></a>
+          <div class="footer-contact">
+            <h4>Contact Us</h4>
+            <p>👤 Nilesh Pagare</p>
+            <p>📞 +91 8850275587</p>
+            <div class="footer-social">
+              <a href="#"><img src="assets/email.jpg" alt="email" /></a>
+              <a href="#"
+                ><img
+                  src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png"
+                  alt="Instagram"
+              /></a>
+            </div>
           </div>
         </div>
       </div>
